--- a/src/renderer/styles/App.css
+++ b/src/renderer/styles/App.css
@@ -4,6 +4,17 @@ body {
   height: max-content;
 }
 
+p {
+  margin: 0;
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 600px;
+}
+
 form {
   display: flex;
   flex-direction: row;
@@ -12,7 +23,8 @@ form {
   width: 600px;
   height: 50px;
   background-color: #f5f5f5;
-  border-radius: 20px;
+  border-radius: 15px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.203);
 }
 
 /* Input white */
@@ -23,6 +35,7 @@ input {
   margin: 0;
   flex: 10;
   height: 100%;
+  font-size: large;
 }
 
 input:focus {
@@ -57,12 +70,13 @@ svg {
   align-items: center;
   background-color: #f5f5f5;
   border-radius: 20px;
-  width: 600px;
   max-height: 600px;
   height: fit-content;
+  width: 600px;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-color: #afafaf transparent; /* For Firefox */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.203);
 }
 
 .result {
