--- a/renderer/app/styles/Settings.module.css
+++ b/renderer/app/styles/Settings.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   background-color: #f5f5f5;
   border-radius: 20px;
-  height: 600px;
+  max-height: 600px;
   width: 600px;
   scrollbar-color: #afafaf transparent;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.203);
@@ -25,13 +25,13 @@
 .settingsContainer__title {
   font-size: 2rem;
   font-weight: 600;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   width: 100%;
   text-align: center;
 }
 
 .settings_textOption {
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -126,10 +126,53 @@
 
 .settings_switchOption {
   margin-bottom: 1.5rem;
-  margin-top: 10px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   width: 70%;
+}
+
+.settings_imageLabel {
+  cursor: pointer;
+}
+
+.settings_imageInput {
+  display: none;
+}
+
+.settings_imageDisplay {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: #d1d5db;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 15px;
+  object-fit: cover;
+}
+
+.settings_shortcutOption {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  width: 80%;
+  justify-content: space-between;
+  align-items: center;
+  caret-color: transparent;
+  margin-bottom: 20px;
+}
+
+.settings_shortcutInput {
+  border: solid 1px #4b5563;
+  border-radius: 0.375rem;
+  padding: 0.5rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: black;
+  max-width: 180px;
+  text-align: center;
 }
